# ja-opencode-computer-use

./: ARCHITECTURE.md  Cargo.toml  README.md  SPECS.md
scripts/: setup.sh
src/: config.rs  lib.rs  main.rs  safety.rs  server.rs
src/browser/: mod.rs
src/llm/: anthropic.rs  local.rs  mod.rs  ollama.rs  openai.rs
src/mcp/: mod.rs  tools.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/transport/: sse.rs
src/vision/: mod.rs
tests/: integration.rs
